--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -136,7 +136,7 @@
                         </a>
                     </li>
                     <li *ngSwitchCase="false">
-                        <a class="dropdown-item" (click)="login()" id="login">
+                        <a class="dropdown-item" routerLink="login" id="login">
                             <i class="fa fa-fw fa-sign-in" aria-hidden="true"></i>
                             <span>Sign in</span>
                         </a>
