--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,16 @@
-<div class="footer">
-    <p>This is your footer</p>
-</div>
+<footer class="footer">
+    <div id="disclaimer" class="float-left">
+        <span>Pages © {{ today | date:'y'}}- Site built by Hans-Jörg Schrödl - {{version}}</span>
+    </div>
+    <div class="float-right">
+        <div class="col-md-6">
+            <a href="http://facebook.com/nicoplyley" class="facebook"><i
+                class="fa fa-facebook"></i>@nicoplyley</a>
+        </div><!--end .col-md-6-->
+        <div class="col-md-6 text-right">
+            <a href="http://twitter.com/nicoplyley" class="twitter"><i
+                class="fa fa-twitter"></i>@nicoplyley</a>
+        </div>
+    </div>
+    </div>
+</footer>
