--- a/src/main/webapp/app/account/login/login.scss
+++ b/src/main/webapp/app/account/login/login.scss
@@ -8,4 +8,13 @@
 
 h2 {
     text-align: center;
+    margin-top: 15px;
+    margin-bottom: 30px;
+
+}
+
+.footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
 }
