--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,10 +1,7 @@
-<!--<div>-->
+<router-outlet name="navbar"></router-outlet>
 
-<!--</div>-->
-<!--<div class="container-fluid">-->
-<!--<div class="card jh-card">-->
-<!--<router-outlet></router-outlet>-->
-
-<!--</div>-->
 <router-outlet></router-outlet>
+
+<router-outlet name="popup"></router-outlet>
+
 
