I finally found a way to make it work :tada:

--- a/src/main/webapp/app/account/login/login.scss
+++ b/src/main/webapp/app/account/login/login.scss
@@ -10,11 +10,9 @@ h2 {
     text-align: center;
     margin-top: 15px;
     margin-bottom: 30px;
-
 }
 
-.footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
+:host {
+    display: flex;
+    height: 75vh;
 }
