--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,7 +1,15 @@
 <router-outlet name="navbar"></router-outlet>
-
-<router-outlet></router-outlet>
-
+<main class="main ">
+    <div class="container">
+        <div class="card jh-card">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</main>
 <router-outlet name="popup"></router-outlet>
+<jhi-footer></jhi-footer>
+
+
+
 
 
