--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -9,8 +9,9 @@ body, h1, h2, h3, h4 {
 }
 
 html, body {
-    height: 100vh;
+    height: 100%;
 }
+
 
 
 /* ==========================================================================
@@ -18,6 +19,7 @@ Browser Upgrade Prompt
 ========================================================================== */
 .browserupgrade {
     margin: 0.2em 0;
+    background: #ccc;
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
