--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,9 +1,8 @@
-<nav class="navbar navbar-toggleable-md navbar-light jh-navbar">
+<nav class="navbar navbar-toggleable-md navbar-light pages-navbar">
     <div class="container">
         <div class="jh-logo-container float-left">
-            <a class="jh-navbar-toggler hidden-lg-up float-right" href="javascript:void(0);" data-toggle="collapse"
-               data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-               aria-label="Toggle navigation" (click)="toggleNavbar()">
+            <a class="pages-navbar-toggler hidden-lg-up float-right" href="javascript:void(0);" data-toggle="collapse"
+               data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" routerLink="/">
                 <i class="fa fa-bars"></i>
             </a>
             <a class="navbar-brand logo float-left" routerLink="/" (click)="collapseNavbar()">
@@ -11,13 +10,14 @@
                 <span class="navbar-title">Pages</span>
             </a>
         </div>
-        <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed"
+        <div class="navbar-collapse collapse" id="navbarResponsive"
+             [ngbCollapse]="isNavbarCollapsed"
              [ngSwitch]="isAuthenticated()">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-                    <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
-                        <i class="fa fa-home" aria-hidden="true"></i>
-                        <span>Home</span>
+                <li *ngSwitchCase="false" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                    <a class="nav-link" routerLink="/login" (click)="collapseNavbar()">
+                        <i class="fa fa-sign-in" aria-hidden="true"></i>
+                        <span>Sign In</span>
                     </a>
                 </li>
                 <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
@@ -111,7 +111,7 @@
                         </li>
                     </ul>
                 </li>
-                <li ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active"
+                <li *jhiHasAnyAuthority="'ROLE_USER'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact: true}">
                     <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu">
                   <span *ngIf="!getImageUrl()">
@@ -157,13 +157,6 @@
                             <a class="dropdown-item" routerLink="login" id="login">
                                 <i class="fa fa-fw fa-sign-in" aria-hidden="true"></i>
                                 <span>Sign in</span>
-                            </a>
-                        </li>
-                        <li *ngSwitchCase="false">
-                            <a class="dropdown-item" routerLink="register" routerLinkActive="active"
-                               (click)="collapseNavbar()">
-                                <i class="fa fa-fw fa-registered" aria-hidden="true"></i>
-                                <span>Register</span>
                             </a>
                         </li>
                     </ul>
