--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -14,34 +14,27 @@
              [ngbCollapse]="isNavbarCollapsed"
              [ngSwitch]="isAuthenticated()">
             <ul class="navbar-nav ml-auto">
-                <li *ngSwitchCase="false" class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <li *ngSwitchCase="false" class="nav-item" routerLinkActive="active"
+                    [routerLinkActiveOptions]="{exact: true}">
                     <a class="nav-link" routerLink="/login" (click)="collapseNavbar()">
                         <i class="fa fa-sign-in" aria-hidden="true"></i>
                         <span>Sign In</span>
                     </a>
                 </li>
-                <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
-                <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active"
+                <li *ngSwitchCase="true" class="nav-item" routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact: true}">
-                    <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu">
-                    <span>
-                        <i class="fa fa-th-list" aria-hidden="true"></i>
-                        <span>
-                            Entities
-                        </span>
-                        <b class="caret"></b>
-                    </span>
+                    <a class="nav-link" routerLink="/edit" (click)="collapseNavbar()">
+                        <i class="fa fa-plus-square-o" aria-hidden="true"></i>
+                        <span>New</span>
                     </a>
-                    <ul class="dropdown-menu" ngbDropdownMenu>
-                        <li>
-                            <a class="dropdown-item" routerLink="document" routerLinkActive="active"
-                               [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                                <i class="fa fa-fw fa-asterisk" aria-hidden="true"></i>
-                                <span>Document</span>
-                            </a>
-                        </li>
-                        <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
-                    </ul>
+                </li>
+
+                <li *ngSwitchCase="true" class="nav-item" routerLinkActive="active"
+                    [routerLinkActiveOptions]="{exact: true}">
+                    <a class="nav-link" routerLink="/pages" (click)="collapseNavbar()">
+                        <i class="fa fa-book" aria-hidden="true"></i>
+                        <span>All</span>
+                    </a>
                 </li>
                 <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer"
                     routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
@@ -111,7 +104,8 @@
                         </li>
                     </ul>
                 </li>
-                <li *jhiHasAnyAuthority="'ROLE_USER'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active"
+                <li *jhiHasAnyAuthority="'ROLE_USER'" ngbDropdown class="nav-item dropdown pointer"
+                    routerLinkActive="active"
                     [routerLinkActiveOptions]="{exact: true}">
                     <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu">
                   <span *ngIf="!getImageUrl()">
