--- a/src/main/webapp/app/pages/page-edit.component.html
+++ b/src/main/webapp/app/pages/page-edit.component.html
@@ -1,1 +1,20 @@
-<div>Hello world!</div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="markdown-area">Example textarea</label>
+                <textarea class="form-control" name="markdown" id="markdown-area" rows="30"
+                          placeholder="Enter your markdown here..."
+                          (keyup)="renderMarkdown($event.target.value)"></textarea>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h2>
+                <span>Rendered</span>
+            </h2>
+            <div [innerHtml]="convertedText"></div>
+        </div>
+    </div>
+    <br/>
+</div>
+
