--- a/src/main/webapp/app/pages/page-edit.component.html
+++ b/src/main/webapp/app/pages/page-edit.component.html
@@ -1,39 +1,90 @@
 <!--Full component on bootsnipp: https://bootsnipp.com/snippets/featured/html-editor-wysiwyg-interface-->
-<div class="container d-flex align-items-center">
-    <div class="row justify-content-top" style="width: 100%;">
+<div class="container d-flex align-items-top">
+    <div class="row justify-content-top w-100">
         <div class="col-md-12" [ngSwitch]="isPreview()">
-            <div class="panel panel-primary">
+            <div class="panel panel-primary h-100" id="main-panel">
                 <div class="panel-heading">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" title="New file">
-                            <i class="fa fa-file-o"></i>
-                        </button>
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" title="Save">
-                            <i class="fa fa-save"></i>
-                        </button>
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" title="Print">
-                            <i class="fa fa-print"></i>
-                        </button>
-                        <button type="button" class="btn btn-default" data-toggle="tooltip" title="Source code">
-                            <i class="fa fa-code"></i> Source
-                        </button>
+                    <h2>
+                        New Page
+                    </h2>
+                    <div class="row pt-1 pb-1 ">
+                        <div class="input-group col-md-3">
+                            <input placeholder="Name" class="form-control">
+                        </div>
+                        <div class="input-group col-md-9 pull-right">
+                            <input placeholder="Description" class="form-control input-md ">
+                        </div>
+                    </div>
+
+                    <!--Add buttons here later-->
+                    <div class="pt-2 ">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Bold">
+                                <i class="fa fa-bold"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Italic">
+                                <i class="fa fa-italic"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Underline">
+                                <i class="fa fa-underline"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Strikethrough">
+                                <i class="fa fa-strikethrough"></i>
+                            </button>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align left">
+                                <i class="fa fa-align-left"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align center">
+                                <i class="fa fa-align-center"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align right">
+                                <i class="fa fa-align-right"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Align justify">
+                                <i class="fa fa-align-justify"></i>
+                            </button>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Numbered list">
+                                <i class="fa fa-list-ol"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Bulleted list">
+                                <i class="fa fa-list-ul"></i>
+                            </button>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Link">
+                                <i class="fa fa-link"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Unlink">
+                                <i class="fa fa-unlink"></i>
+                            </button>
+                        </div>
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Picture">
+                                <i class="fa fa-picture-o"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="HTML table">
+                                <i class="fa fa-table"></i>
+                            </button>
+                            <button type="button" class="btn btn-default" data-toggle="tooltip" title="Font">
+                                <i class="fa fa-font"></i>
+                            </button>
+                        </div>
+                        <div class="btn-group pull-right">
+                            <input (click)="togglePreview()" type="checkbox" checked data-toggle="toggle" data-on="Preview" data-off="Editor" data-onstyle="success" data-offstyle="primary">
+                        </div>
 
                     </div>
-                    <div class="btn-group pull-right">
-                        <button type="button" class="btn btn-primary " data-toggle="button"
-                                aria-pressed="false"
-                                autocomplete="off" (click)="togglePreview()">
-                            Preview
-                        </button>
-                    </div>
                 </div>
-                <div class="panel-body">
-                    <textarea *ngSwitchCase="false" class="form-control" name="markdown" id="markdown-area" rows="30"
-                              placeholder="Enter your content here..."
-                              (keyup)="renderMarkdown($event.target.value)"></textarea>
-                    <div [innerHtml]="convertedText" *ngSwitchCase="true"></div>
+                <div class="panel-body h-75" id="markdown">
+                    <textarea *ngSwitchCase="false" class="form-control h-100" name="markdown-editor" id="markdown-area"
+                              (keyup)="renderMarkdown($event.target.value)" [(ngModel)]="content"></textarea>
+                    <div class="h-100 pt-2 well" id="preview-panel" [innerHtml]="convertedText" *ngSwitchCase="true"></div>
                 </div>
-                <div class="panel-footer">
+                <div class="panel-footer pt-2">
                     <button type="button" class="btn btn-secondary">
                         Cancel
                     </button>
