--- a/src/main/webapp/app/pages/page-edit.component.html
+++ b/src/main/webapp/app/pages/page-edit.component.html
@@ -74,7 +74,11 @@
                             </button>
                         </div>
                         <div class="btn-group pull-right">
-                            <input (click)="togglePreview()" type="checkbox" checked data-toggle="toggle" data-on="Preview" data-off="Editor" data-onstyle="success" data-offstyle="primary">
+                            <button type="button" class="btn btn-primary " data-toggle="button"
+                                    aria-pressed="false"
+                                    autocomplete="off" (click)="togglePreview()">
+                                Preview
+                            </button>
                         </div>
 
                     </div>
@@ -82,7 +86,8 @@
                 <div class="panel-body h-75" id="markdown">
                     <textarea *ngSwitchCase="false" class="form-control h-100" name="markdown-editor" id="markdown-area"
                               (keyup)="renderMarkdown($event.target.value)" [(ngModel)]="content"></textarea>
-                    <div class="h-100 pt-2 well" id="preview-panel" [innerHtml]="convertedText" *ngSwitchCase="true"></div>
+                    <div class="h-100 pt-2 markdown-body" id="preview-panel" [innerHtml]="convertedText"
+                         *ngSwitchCase="true"></div>
                 </div>
                 <div class="panel-footer pt-2">
                     <button type="button" class="btn btn-secondary">
@@ -94,7 +99,10 @@
                         </button>
                     </div>
                 </div>
+
             </div>
+            <input type="checkbox" checked data-toggle="toggle" data-onstyle="success" data-offstyle="danger">
+            <input type="checkbox" checked data-toggle="toggle" data-onstyle="warning" data-offstyle="info">
         </div>
     </div>
 </div>
