--- a/src/main/webapp/app/pages/page.scss
+++ b/src/main/webapp/app/pages/page.scss
@@ -36,13 +36,20 @@ only screen and (min-resolution: 2dppx) {
     padding: 0.5rem 0.75rem
 }
 
-.toggle.android {
-    border-radius: 0px;
+.btn.active {
+	display: none;
 }
 
-.toggle.android .toggle-handle {
-    border-radius: 0px;
+.btn span:nth-of-type(1)  {
+	display: none;
 }
-.toggle-handle {
-    width: 30px;
+.btn span:last-child  {
+	display: block;
+}
+
+.btn.active  span:nth-of-type(1)  {
+	display: block;
+}
+.btn.active span:last-child  {
+	display: none;
 }
