--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -171,6 +171,13 @@ entity detail page css
     }
 }
 
+ .modal-dialog {
+        position: absolute;
+        top: 33%;
+        left: 50%;
+        transform: translate(-50%, -50%) !important;
+    }
+
 @media screen and (min-width: 768px) {
     .row.jh-entity-details > {
         dt {
