--- a/src/main/webapp/app/pages/page.component.html
+++ b/src/main/webapp/app/pages/page.component.html
@@ -3,7 +3,7 @@
         <span>Your Pages</span>
         <button class="btn btn-primary float-right create-document" [routerLink]="['/edit']">
             <span class="fa fa-plus"></span>
-            <span >
+            <span>
             Create new Page
             </span>
         </button>
@@ -12,51 +12,44 @@
     <div class="row">
     </div>
     <br/>
-    <div class="table-responsive" *ngIf="documents">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-            <th><span>ID</span></th>
-            <th><span>Name</span></th>
-            <th><span>Description</span></th>
-            <th><span>Content</span></th>
-            <th><span>User</span></th>
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let document of documents ;trackBy: trackId">
-                <td>{{document.name}}</td>
-                <td>{{document.description}}</td>
-                <td>{{document.content}}</td>
-                <td>
-                    {{document.user?.login}}
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['view', document.id ]"
-                                class="btn btn-info btn-sm">
-                            <span class="fa fa-eye"></span>
-                            <span class="hidden-md-down">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/edit', document.id ]"
-                                class="btn btn-primary btn-sm">
-                            <span class="fa fa-pencil"></span>
-                            <span class="hidden-md-down">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'document/'+ document.id + '/delete'} }]"
-                                replaceUrl="true"
-                                class="btn btn-danger btn-sm">
-                            <span class="fa fa-remove"></span>
-                            <span class="hidden-md-down">Delete</span>
-                        </button>
+    <div class="" *ngIf="documents">
+        <ul class="list-unstyled">
+            <li class="document-item" *ngFor="let document of documents ;trackBy: trackId">
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col-md-6"><h2 class="card-title">{{document.name}}</h2></div>
+                            <div class="col-md-6 text-right">
+                                <div class="btn-group flex-btn-group-container">
+                                    <button type="submit"
+                                            [routerLink]="['view', document.id ]"
+                                            class="btn btn-info btn-m">
+                                        <span class="fa fa-eye"></span>
+                                        <span class="hidden-md-down"></span>
+                                    </button>
+                                    <button type="submit"
+                                            [routerLink]="['/edit', document.id ]"
+                                            class="btn btn-primary btn-m">
+                                        <span class="fa fa-pencil"></span>
+                                        <span class="hidden-md-down"></span>
+                                    </button>
+                                    <button type="submit"
+                                            [routerLink]="['/', { outlets: { popup: 'document/'+ document.id + '/delete'} }]"
+                                            replaceUrl="true"
+                                            class="btn btn-danger btn-m">
+                                        <span class="fa fa-remove"></span>
+                                        <span class="hidden-md-down"></span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="text-left">{{document.description}}</div>
                     </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                    <div class="card-block">
+                        <p class="card-text">{{document.content}}</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
