--- a/src/main/webapp/app/pages/page.component.html
+++ b/src/main/webapp/app/pages/page.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
     <h2>
         <span>Your Pages</span>
         <button class="btn btn-primary float-right create-document" [routerLink]="['/edit']">
@@ -15,40 +15,7 @@
     <div class="" *ngIf="documents">
         <ul class="list-unstyled">
             <li class="document-item" *ngFor="let document of documents ;trackBy: trackId">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row">
-                            <div class="col-md-6"><h2 class="card-title">{{document.name}}</h2></div>
-                            <div class="col-md-6 text-right">
-                                <div class="btn-group flex-btn-group-container">
-                                    <button type="submit"
-                                            [routerLink]="['view', document.id ]"
-                                            class="btn btn-info btn-m">
-                                        <span class="fa fa-eye"></span>
-                                        <span class="hidden-md-down"></span>
-                                    </button>
-                                    <button type="submit"
-                                            [routerLink]="['/edit', document.id ]"
-                                            class="btn btn-primary btn-m">
-                                        <span class="fa fa-pencil"></span>
-                                        <span class="hidden-md-down"></span>
-                                    </button>
-                                    <button type="submit"
-                                            [routerLink]="['/', { outlets: { popup: 'document/'+ document.id + '/delete'} }]"
-                                            replaceUrl="true"
-                                            class="btn btn-danger btn-m">
-                                        <span class="fa fa-remove"></span>
-                                        <span class="hidden-md-down"></span>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-left">{{document.description}}</div>
-                    </div>
-                    <div class="card-block">
-                        <p class="card-text">{{document.content}}</p>
-                    </div>
-                </div>
+                <page-list-item [document]="document"></page-list-item>
             </li>
         </ul>
     </div>
