--- a/src/main/webapp/app/pages/page-view.component.html
+++ b/src/main/webapp/app/pages/page-view.component.html
@@ -1,1 +1,39 @@
-Details!
+<div class="container">
+    <div class="card">
+        <div class="card-header">
+            <div class="row">
+                <div class="col-md-6"><h2 class="card-title">{{document.name}}</h2></div>
+                <div class="col-md-6 text-right">
+                    <div class="btn-group flex-btn-group-container">
+                        <button type="submit"
+                                [routerLink]="['/edit', document.id ]"
+                                class="btn btn-primary btn-m">
+                            <span class="fa fa-pencil"></span>
+                            <span class="hidden-md-down"></span>
+                        </button>
+                        <button   type="submit"
+                                [routerLink]="['/', { outlets: { popup: 'document/'+ document.id + '/delete'} }]"
+                                replaceUrl="true"
+                                class="btn btn-danger btn-m disabled">
+                            <span class="fa fa-remove"></span>
+                            <span class="hidden-md-down"></span>
+
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-text"><span>{{document.description}}</span></div>
+        </div>
+
+
+        <div class="card-block pt-2">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="pt-2 markdown-body" [innerHtml]="convertedText"></div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
