--- a/src/main/webapp/app/pages/page-list-item.component.html
+++ b/src/main/webapp/app/pages/page-list-item.component.html
@@ -1,23 +1,23 @@
 <div class="card mt-2 mb-2 rounded">
     <div class="card-header page-item-header" (click)="collapse()">
         <div class="row">
-            <div class="col-md-6"><h2 class="card-title">{{document.name}}</h2></div>
+            <div class="col-md-6"><h2 class="card-title">{{page.name}}</h2></div>
             <div class="col-md-6 text-right">
                 <div class="btn-group flex-btn-group-container">
                     <button type="submit"
-                            [routerLink]="['/view', document.id ]"
+                            [routerLink]="['/view', page.id ]"
                             class="btn btn-info btn-m">
                         <span class="fa fa-eye"></span>
                         <span class="hidden-md-down"></span>
                     </button>
                     <button type="submit"
-                            [routerLink]="['/edit', document.id ]"
+                            [routerLink]="['/edit', page.id ]"
                             class="btn btn-primary btn-m">
                         <span class="fa fa-pencil"></span>
                         <span class="hidden-md-down"></span>
                     </button>
                     <button type="submit"
-                            [routerLink]="['/', { outlets: { popup: 'delete/'+ document.id } }]"
+                            [routerLink]="['/', { outlets: { popup: 'delete/'+ page.id } }]"
                             replaceUrl="true"
                             class="btn btn-danger  btn-m" aria-pressed="false">
                         <span class="fa fa-remove"></span>
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <div class="text-left">{{document.description}}</div>
+        <div class="text-left">{{page.description}}</div>
     </div>
 
     <div class="card-block page-item-container" [ngbCollapse]="isCollapsed">
