--- a/src/main/webapp/app/pages/popup/page-delete-dialog.component.html
+++ b/src/main/webapp/app/pages/popup/page-delete-dialog.component.html
@@ -1,4 +1,4 @@
-<form name="deleteForm" (ngSubmit)="confirmDelete(document.id)">
+<form name="deleteForm" (ngSubmit)="confirmDelete(page.id)">
     <div class="modal-header">
         <h4 class="modal-title">Confirm delete operation</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p>Are you sure you want to delete this Document?</p>
+        <p>Are you sure you want to delete this Page?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
