Start adding theme

--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer text-center">
+<div class="footer text-center navbar-light">
     <div class="container">
             <span class="navbar-text pull-left">Pages © {{ today | date:'y'}}- Site built by Hans-Jörg Schrödl -
             {{version}}</span>
