--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-light pages-navbar">
+<nav class="navbar navbar-toggleable-md navbar-light bg-primary pages-navbar">
     <div class="container">
         <div class="jh-logo-container float-left">
             <a class="pages-navbar-toggler hidden-lg-up float-right" href="javascript:void(0);" data-toggle="collapse"
