--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="footer text-center navbar-light">
     <div class="container">
-            <span class="navbar-text pull-left">Pages © {{ today | date:'y'}}- Site built by Hans-Jörg Schrödl -
+            <span class="version-text pull-left">Pages © {{ today | date:'y'}}- Site built by Hans-Jörg Schrödl -
             {{version}}</span>
         <div class="navbar-text pull-right ">
             <a href="https://github.com/hschroedl/pages"><i class="fa fa-github"
