--- a/src/main/webapp/app/layouts/footer/footer.scss
+++ b/src/main/webapp/app/layouts/footer/footer.scss
@@ -6,4 +6,10 @@
     #disclaimer {
         margin-left: 20px;
     }
+    .version-text {
+        display: inline-block;
+        padding-top: .425rem;
+        padding-bottom: .425rem;
+    }
+
 }
