--- a/src/main/webapp/app/account/login/login.component.html
+++ b/src/main/webapp/app/account/login/login.component.html
@@ -26,15 +26,14 @@
                     <label class="form-check-label" for="rememberMe">
                         <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe"
                                [(ngModel)]="rememberMe" checked>
-                        <span>Remember me</span>
+                        Remember me
                     </label>
                     <div class="text-center pull-right">
-                        Did you forget your
-                        <a class="text-warning" (click)="requestResetPassword()">password?</a>
+                        <a class="" (click)="requestResetPassword()"> Did you forget your password?</a>
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-md btn-default col-md-12">Login</button>
+                    <button type="submit" class="btn btn-secondary col-md-12 login">Login</button>
                 </div>
             </form>
         </div>
