--- a/src/main/webapp/app/account/login/login.scss
+++ b/src/main/webapp/app/account/login/login.scss
@@ -1,9 +1,15 @@
+@import "../../../content/scss/variables";
+
 #box {
     border: 1px solid rgb(200, 200, 200);
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 5px 5px 2px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 5px 5px 2px;
     background: rgba(200, 200, 200, 0.1);
     border-radius: 4px;
     margin-top: -100px;
+}
+
+.login:hover {
+
 }
 
 h2 {
